[tool.poetry]
name = "gp-package"
version = "0.1.0"
description = ""
authors = ["Alex Stihi <astihi1@sheffield.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.9"
numpy = "1.24.2"
tensorflow-io-gcs-filesystem = "0.30.0"
gpflow = "2.6.2"
scipy = "1.10.0"
tensorflow = "2.11.0"
ipykernel = "6.21.2"
scikit-learn = "1.2.1"
ipython = "8.10.0"
keras = "2.11.0"
matplotlib = "3.7.0"
tensorflow-intel = "2.11.0"
tensorflow-estimator = "2.11.0"
tensorboard-plugin-wit = "1.8.1"
tensorflow-probability = "0.19.0"
tqdm = "4.64.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
